src/css/style.css
/* ... */
div.container-delete{
    width: 5%;
}

div.container-delete button.delete-button{
    border: none;
    background-color: #92fc92;
    border-radius: 3px;
    border: 1px solid #92fc92;
}

div.container-delete button.delete-button:hover{
    border: 1px solid #7dd87d;
}

div#main-window div.task-panel-done {
    display: flex; 
    width: 100%;
    height: 50px;
    background-color: #D3D8EB; 
    margin: 10px;
    border: 3px solid #D3D8EB;
    border-radius: 5px;
    text-decoration: line-through;
    color: #BABECF;
    
}

div#main-window div.task-panel-done button{
    background-color: #D3D8EB;
    border: #D3D8EB;
}

div#main-window div.task-today button{
    background-color: var(--color-today);
    border: 1px solid var(--color-today);
}

div#main-window div.task-today button:hover{
    background-color: var(--color-today-light);
}

button.confirm-edit-button{
    background-color: red;
}

.header-image{
    content: url(../components/main-page/todo-logo.png); 
}

.edit-button-icon {
    content: url(../components/tasks-panel/edit-png.png);
    pointer-events: none;
}

.delete-button-icon {
    content: url(../components/tasks-panel/baseline_delete_black_24dp.png);
    pointer-events: none;
}

div.container-date-information{
    height: 14%;
}

div.container-date-information div.date-information{
    text-align: center;
    font-family: var(--font-style-light);
    color: var(--color-normal-font);
    background-color: var(--accent-color-one);
    border: 1px solid var(--accent-color-pink-brighter);
}

div.container-date-information div.container-task{
    position: relative;
    height: 86%;
    display: flex;
    flex-wrap: wrap;
    align-content: flex-start;
    overflow-y: scroll;
    padding: 0 30px; 
}

div.container-panel-mini {
    display: flex;
    width: 100%;
    height: 20px;
    background-color: white; 
    border: 3px solid var(--inbox-color);
    border-radius: 5px;
}

.panel-disabled{
    display: none !important; 
}

.container-colors-hidden{
    display: none !important; 
}

.container-colors-active{
    display: block;
    position: absolute;
    background-color: transparent;
    height: 240px;
    width: 160px;
    
}

.option-color-container {
    display: flex;
    position: relative;
    width: 100%;
    height: 16px;  
    border-radius: 3px;
}

.color-circle{
    position: relative;
    width: 5px;
    height: 5px;
    border-radius: 50%;
}

.color-name{
    position: relative;
    width: 50px;
    height: 16px;
    color: black;
}


div#projects-container{
    display: relative;
    width: 150px;
    height: 500px;
    background-color: white;
}

.project-element{
    display: relative;
    width: 100%;
    height: 20px;
}

i.edit-project-icon{
    content: url(../components/tasks-panel/edit-png.png);
    pointer-events: none;
}

i.delete-project-icon{
    content: url(../components/tasks-panel/baseline_delete_black_24dp.png);
    pointer-events: none;
}

div#color-picker{
    background-color: var(--accent-color-one);
    border:1px solid var(--color-button-project-light); 
    color: var(--color-button-project-light);
    width: 150px;
    text-align: center;
    padding: 5px;
    border-radius: 3px;
}

div#color-picker:hover{
    background-color: var(--color-button-project-light);
    color: var(--accent-color-one);
    border: 1px solid var(--color-button-project-light)
}

div.color-picker-container{
    height: auto;
    margin: 0 auto;
    padding: 7px;    
}

div.color-picker{
    color: var(--accent-color-one);
    width: 150px;
    text-align: center;
    padding: 5px;
    border-radius: 3px;
}

label.color-name{
    width: 100%;
    text-align: left;
    color: var(--color-normal-font);
    font-family: var(--font-style-light);
    font-size: 14px;
}

div.option-color-container{
    width: 150px;
    text-align: left;
    padding: 5px;
    margin: 2px;
}



div.new-project-button-container{
    padding:10px;
 }
 
 
 div.title-project{
     font-family: var(--font-style);
     color: var(--color-button-project);
 }

 button#new-project {
    position:relative; 
    width: 100px; 
    background-color: var(--color-button-project);
    border-radius: 3px;
    border-style: none;
    border: 1px solid var(--color-button-project-light);
    font-weight: bold;
} 

button#new-project:hover{
    background-color: var(--color-button-project-darker);
    border: 1px solid var(--color-button-project);
}
div.project-start-container{
    padding: 10px;
    text-align: center;
}

div#projects-section{
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
}

div#projects-container{
    width: 80%;
    background-color: var(--accent-color-darker);
    border-radius: 3px;
    overflow-y: auto;
}

li.project-element{
    display: flex;
    flex-flow: row wrap;
    font-family: var(--font-style);
   color: white;
    height: 70px;
    border: 3px;
    margin: 0.1px;
}

li.project-element button{
    margin: 2px;
    height: 30px;
    width: 18px;
    flex: 1 0 20%;
    font-size: 16px;
}

li.project-element div.project-name{
    text-align: center;
    flex: 0 1 100%;
    font-size: 16px; 
    pointer-events: none;
}

form.form-projects label.title-project{
    padding: 5px;
    border:1px solid var(--accent-color-one); 
    width: fit-content;
    background-color: #3d2e47;
    border-start-start-radius: 10px;
    border-start-end-radius:  10px;
    margin: 0 15px;
}

div.container-title-project-input{
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    padding: 6px 0 ;
}

input#title-project{
    background-color: var(--accent-color-two);
    border: 1px solid var(--accent-color-pink-brighter);    
    border-radius: 3px;
    color: var(--color-normal-font); 
    font-family: var(--font-style-light);
    font-size: 14px;
    margin: 0 15px;
}

input#title-project:focus {
    outline: none !important;
    border: 1px solid var(--color-button-project-light); 
}
/* ... */

